manifests/gateway/teleport-auth-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: teleport-auth-gateway-route
spec:
  parentRefs:
  - name: teleport-gateway
    sectionName: teleport-auth
  hostnames:
  - "teleport.cloudnull.dev"
  rules:
    - backendRefs:
      - name: teleport-cluster
        port: 3080
